--- a/style.css
+++ b/style.css
@@ -40,6 +40,11 @@ body {
   transition: transform 0.5s linear;
 }
 
+/* when container has 'show-nav' added to its className, the close button appears in circle */
+.container.show-nav .circle {
+  transform: rotate(-70deg);
+}
+
 .circle button {
   position: absolute;
   top: 50%;
@@ -49,6 +54,7 @@ body {
   border: 0;
   font-size: 26px;
   color: #fff;
+  cursor: pointer;
 }
 
 .circle button:focus {
@@ -65,6 +71,68 @@ body {
   transform-origin: top left;
 }
 
+.container.show-nav + nav li {
+  transform: translateX(0);
+  transition-delay: 0.3s;
+}
+
+nav {
+  position: fixed;
+  bottom: 40px;
+  left: 0;
+  z-index: 100;
+}
+
+nav ul {
+  list-style-type: none;
+  padding-left: 30px;
+}
+
+nav ul li {
+  text-transform: uppercase;
+  color: #fff;
+  margin: 40px 0;
+  transform: translateX(-100%);
+  transition: transform 0.4s ease-in;
+}
+
+/* Size icons */
+nav ul li i {
+  font-size: 20px;
+  margin-right: 10px;
+}
+
+/* Stick "About" li out 15px from Home */
+nav ul li + li {
+  margin-left: 15px;
+  transform: translateX(-150%);
+}
+
+/* Stick "Contact" li out double what Home is. */
+nav ul li + li + li {
+  margin-left: 30px;
+  transform: translateX(-200%);
+}
+
 .content img {
   max-width: 100%;
+}
+
+.content {
+  max-width: 1000px;
+  margin: 50px auto;
+}
+
+.content h1 {
+  margin: 0;
+}
+
+.content small {
+  color: #555;
+  font-style: italic;
+}
+
+.content p {
+  color: #333;
+  line-height: 1.5;
 }
